--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "ZimCrowd Team",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/vision": "^4.0.2",
     "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "^2.39.0",
     "bcryptjs": "^2.4.3",
