Add PayNow package dependency (v2.2.2)

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pg": "^8.11.3",
     "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
@@ -35,6 +34,8 @@
     "mailgun.js": "^12.1.1",
     "multer": "^1.4.5-lts.1",
     "otplib": "^12.0.1",
+    "paynow": "^2.2.2",
+    "pg": "^8.11.3",
     "resend": "^3.0.0",
     "twilio": "^4.19.0",
     "uuid": "^13.0.0",
