--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/vision": "^4.0.2",
+    "@google/generative-ai": "^0.24.1",
     "@sendgrid/mail": "^8.1.6",
     "@supabase/supabase-js": "^2.39.0",
     "bcryptjs": "^2.4.3",
