Complete Express API Server Created
FULL EXPRESS SERVER IMPLEMENTATION:

Files Created:
 api-server.js (200+ lines)
 API_SERVER_GUIDE.md (comprehensive guide)
 Updated package.json with new scripts

Express Server Features:
 Complete middleware setup
 CORS configuration
 Body parsing (10MB limit)
 Request logging
 Static file serving
 Error handling
 404 handler
 Global error handler
 Graceful shutdown

All Routes Integrated:
 /api/auth - Authentication
 /api/profile - User profile
 /api/profile-setup - KYC setup
 /api/wallet - Wallet management
 /api/transactions - Transaction history
 /api/loans - Loan management
 /api/investments - Investment portfolio
 /api/admin-dashboard - Admin panel
 /api/kyc-ocr - OCR document processing (NEW!)
 /api/account-status - Account management
 /api/notifications - User notifications
 /api/market - Loan marketplace
 /api/analytics - Platform analytics
 /api/referrals - Referral system

Health Check Endpoint:
 GET /api/health
   - Server status
   - Timestamp
   - Version info
   - Services list

Error Handling:
 Multer file size errors
 File type validation errors
 404 not found
 Global error handler
 Development vs production errors
 Detailed error logging

NPM Scripts Added:
 npm run api - Production mode
 npm run api:dev - Development mode (nodemon)

Server Configuration:
 Port: 3001 (configurable via .env)
 CORS enabled
 JSON body parsing
 URL-encoded parsing
 Request logging
 Environment-based config

Startup Display:
 Beautiful ASCII banner
 All endpoint URLs listed
 Server info displayed
 Timestamp shown
 Environment displayed

Documentation Includes:
 How to run (3 methods)
 Environment variables needed
 File structure verification
 Testing procedures
 All endpoint list (50+ endpoints)
 Troubleshooting guide
 Production deployment guide
 PM2 setup instructions
 Nginx configuration
 Startup checklist

Troubleshooting Covered:
 Missing route modules
 Port already in use
 Google Vision key issues
 Authentication middleware
 Da

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "start": "node backend-server.js",
     "dev": "nodemon backend-server.js",
+    "api": "node api-server.js",
+    "api:dev": "nodemon api-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
