Railway Deployment Configuration
RAILWAY DEPLOYMENT READY:

Files Created:
 railway.json - Railway configuration
 Procfile - Process definition
 RAILWAY_DEPLOYMENT_GUIDE.md - Complete deployment guide

Configuration Updates:
 package.json:
   - Updated start script to use api-server-minimal.js
   - Added Node.js version requirement (>=18.x)
   - Railway will use 'npm start' automatically

 api-server-minimal.js:
   - Added Railway PORT environment variable support
   - Fallback: PORT  API_PORT  3001
   - Compatible with Railway's dynamic port assignment

Railway Configuration:
 Builder: NIXPACKS (automatic)
 Start Command: node api-server-minimal.js
 Restart Policy: ON_FAILURE (10 retries)
 Node Version: >=18.x

Deployment Guide Includes:
 Step-by-step Railway CLI setup
 Environment variable configuration
 Google Vision credentials handling
 Continuous deployment setup
 Monitoring and logging
 Troubleshooting guide
 Frontend integration instructions

Environment Variables Needed:
- SUPABASE_URL
- SUPABASE_ANON_KEY
- SUPABASE_SERVICE_ROLE_KEY
- JWT_SECRET
- NODE_ENV=production
- GOOGLE_VISION_CREDENTIALS (JSON string)

Deployment Commands:
1. railway login
2. railway init
3. railway variables set KEY=VALUE
4. railway up
5. railway domain

Ready to deploy with: railway up

--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "backend-server.js",
   "type": "commonjs",
   "scripts": {
-    "start": "node backend-server.js",
+    "start": "node api-server-minimal.js",
     "dev": "nodemon backend-server.js",
     "api": "node api-server-minimal.js",
     "api:dev": "nodemon api-server-minimal.js",
     "api:full": "node api-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": ">=18.x"
   },
   "keywords": [
     "crowdfunding",
