Fix Render Deployment Issues
CRITICAL FIXES FOR RENDER:

1. Package.json Fix:
 Changed main field from backend-server.js to api-server-minimal.js
 Ensures Render runs the correct server file
 Matches npm start script

2. Email Service Fix:
 Made Resend initialization conditional
 Checks if RESEND_API_KEY exists before creating client
 Prevents crash when API key is missing
 Added fallback to SendGrid when Resend unavailable
 Graceful degradation for email features

3. Error Handling:
 sendOTPEmail now handles missing Resend
 sendPasswordResetOTPEmail now handles missing Resend
 Both functions fallback to SendGrid if available
 Returns proper error messages when no provider configured

Changes Made:
- package.json: main = 'api-server-minimal.js'
- utils/email-service.js: Conditional Resend initialization
- utils/email-service.js: Added fallback logic for both email functions

Why This Fixes Deployment:
 Before: Server crashed on startup due to missing RESEND_API_KEY
 After: Server starts successfully, email features degrade gracefully

Optional Environment Variables:
- RESEND_API_KEY (optional - for email)
- SENDGRID_API_KEY (optional - fallback email)
- TWILIO_* (optional - for SMS)

Server will now start even if these are missing!

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zimcrowd-backend",
   "version": "1.0.0",
   "description": "ZimCrowd Backend API Server",
-  "main": "backend-server.js",
+  "main": "api-server-minimal.js",
   "type": "commonjs",
   "scripts": {
     "start": "node api-server-minimal.js",
